exports[`test A standard order 1`] = `
<li
  className="kzmPKB">
  <span
    className="gNnRFc">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="iyCQMK">
    MOOIE 456 TEST
  </span>
  <span
    className="gWlcUz">
    <div>
       
      <div>
         
        Name of the product
         
      </div>
      <div>
         
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="hqwJWt">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="lhPCly">
    completed
  </span>
  <span
    className="duzOqA">
    <a
      aria-label="Download invoice"
      className="cWcbKk"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink" />
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="kzmPKB">
  <span
    className="gNnRFc">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="iyCQMK">
    MOOIE 456 TEST
  </span>
  <span
    className="gWlcUz">
    <div>
       
      <div>
         
        Name of the product
         
      </div>
      <div>
         
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="hqwJWt">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="lhPCly">
    pending
  </span>
  <span
    className="duzOqA">
    <button
      aria-label="Download invoice"
      className="wmLcN dsTvgF"
      disabled="disabled"
      to="http://somelink" />
  </span>
</li>
`;
